--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -1,4 +1,4 @@
-{% extends 'products/base.html' %}
+{% extends 'product/base.html' %}
 {% block content %}
     <div class="container">
         <div class="row text-center">
@@ -7,7 +7,7 @@
                 <div class="card mb-4 box-shadow">
                     <div class="card-header">
                         <h4 class="my-0 font-weight-normal">{{ object.name}}</h4>
-                        <a class="p-2 btn btn-lg btn-block btn-outline-primary" href="{% url 'products:one' object.pk %}">Посмотреть </a>
+                        <a class="p-2 btn btn-lg btn-block btn-outline-primary" href="{% url 'product:product_details' object.pk %}">Посмотреть </a>
                     </div>
                 </div>
             </div>
