--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -21,7 +21,8 @@
                             {{ object.description|slice:":100" }}
                         </li>
                     </ul>
-                    <a class="p-2 btn btn-lg btn-block btn-outline-primary" href=>Купить </a>
+                    <a href = "{% url 'product:product_update' object.pk %}" type="button"
+                       class="btn btn-lg btn-block btn-outline-primary" >Изменить</a>
                 </div>
             </div>
         </div>
