--- a/product/templates/product/product_list.html
+++ b/product/templates/product/product_list.html
@@ -1,5 +1,8 @@
 {% extends 'product/base.html' %}
 {% block content %}
+    <div class="col-12 md-5">
+        <a class="btn btn-outline-primary" href="{% url 'product:product_create' %}">Добавить продукт</a>
+    </div>
     <div class="container">
         <div class="row text-center">
         {% for object in object_list %}
@@ -7,6 +10,13 @@
                 <div class="card mb-4 box-shadow">
                     <div class="card-header">
                         <h4 class="my-0 font-weight-normal">{{ object.name}}</h4>
+                            <div class="row"> Версия продукта:
+                                {% if version %}
+                                    <small class="d-block mb-3 text-muted">Актуальная версия:
+
+                                    </small>
+                                {% endif %}
+                            </div>
                         <a class="p-2 btn btn-lg btn-block btn-outline-primary" href="{% url 'product:product_details' object.pk %}">Посмотреть </a>
                     </div>
                 </div>
