--- a/product/templates/product/product_detail.html
+++ b/product/templates/product/product_detail.html
@@ -21,7 +21,7 @@
                                 {{ object.description|slice:":100" }}
                             </li>
                         </ul>
-                        {% if user.is_authenticated %}
+                        {% if user == object.user_own or perms.product.change_product %}
                             <a href = "{% url 'product:product_update' object.pk %}" type="button"
                                class="btn btn-lg btn-block btn-outline-primary" >Изменить</a>
                         {% endif %}
