--- a/product/templates/product/includes/inc_main_menu.html
+++ b/product/templates/product/includes/inc_main_menu.html
@@ -4,6 +4,7 @@
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
         <a class="p-2 btn btn-outline-primary" href="/blog_list/">Прейти в Блог</a>
+        <a class="p-2 btn btn-outline-primary" href="/category_list/">Посмотреть категории продуктов</a>
             {% if user.is_authenticated %}
               <li><a href="{% url 'users:profile' %}" >Профиль</a></li>
               <li><a href="{% url 'users:logout' %}" >Выйти</a></li>
